<resources>
    <string name="app_name">HoloShop</string>
    <string name="get_started">Get Started</string>
    <string name="slogan">Discover,\nExperience,\nPurchase</string>
    <string name="sloga2">All with the power of AR</string>
    <string name="welcome">Welcome\nBack!</string>
    <string name="username">Username or Email</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">Login</string>
    <string name="cont">- OR Continue with -</string>
    <string name="create">Create an Account Sign Up now!</string>
    <string name="createaccount">Create an\nAccount</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="createBtn">Create Account</string>
    <string name="alreadyhave">I Already Have an Account, Login Here</string>
    <string name="bottom_cart">Cart</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="cartBtn">Add to Cart</string>
    <string name="buynowBtn">Buy Now</string>
    <string name="arBtn">View in AR</string>
    <string name="product_name">Product Name</string>
    <string name="rs_0">Rs. 0</string>
    <string name="shoplist">Shopping List</string>
    <string name="paymentProceed">Proceed to Payment</string>
    <string name="urTotal">Your Total Pay is : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>