<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in">

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/createaccount"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="227dp" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/confirmpass"
        android:inputType="textPassword"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="290dp" />

    <ImageView
        android:id="@+id/fb"
        android:layout_width="64dp"
        android:layout_height="61dp"
        app:srcCompat="@drawable/fb"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="542dp" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="208dp"
        android:layout_height="60dp"
        android:background="@drawable/light_blue_btn"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/createBtn"
        android:textSize="17dp"
        app:backgroundTint="@color/LightBlue"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="391dp" />

    <TextView
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/cont"
        android:textColor="@color/Grey"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="501dp" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="64dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/google"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="544dp" />

    <TextView
        android:id="@+id/alreadyhave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/alreadyhave"
        android:textColor="@color/LightBlue"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="628dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="165dp" />

</androidx.constraintlayout.widget.ConstraintLayout>